Fix add to cart button on mobile

--- a/components/AddToCartButton/AddToCartButton.module.sass
+++ b/components/AddToCartButton/AddToCartButton.module.sass
@@ -1,4 +1,10 @@
+@import ../../styles/_variables.sass
+
 .cta
   height: 2.5rem
   margin-top: auto
   font-size: inherit
+  padding: 0
+
+  +mobile
+    height: 3rem
