--- a/components/CategoryNavigation/CategoryNavigation.module.sass
+++ b/components/CategoryNavigation/CategoryNavigation.module.sass
@@ -39,3 +39,6 @@
     display: inline-block
     padding: 0 .75rem
     +hoverable(var(--surface-2dp))
+
+    +mobile
+      font-size: 1.25rem
