--- a/components/ProductCard/ProductCard.module.sass
+++ b/components/ProductCard/ProductCard.module.sass
@@ -17,3 +17,6 @@
 .description
   font-size: .9em
   margin: .25rem 0 .75rem
+
+  +mobile
+    text-align: center
