--- a/components/layout/Header/Header.module.sass
+++ b/components/layout/Header/Header.module.sass
@@ -3,7 +3,7 @@
 .header
   display: grid
   align-items: center
-  background: var(--surface-1dp)
+  background: var(--surface-2dp)
   z-index: 10
   top: 0
   left: 0
